@@ -1,5 +1,6 @@
 2023-XX-XX: 0.4.3:
 ------------------
+  * modernize CLI to use argparse (in favor of optparse)
 
 
 2021-04-07: 0.4.2:
